; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_amd7930_fn.c_WriteWordAmd7930.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_amd7930_fn.c_WriteWordAmd7930.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.IsdnCardState = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.IsdnCardState*, i32, i32)* @WriteWordAmd7930 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @WriteWordAmd7930(%struct.IsdnCardState* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.IsdnCardState*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.IsdnCardState* %0, %struct.IsdnCardState** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.IsdnCardState*, %struct.IsdnCardState** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @wByteAMD(%struct.IsdnCardState* %7, i32 0, i32 %8)
  %10 = load %struct.IsdnCardState*, %struct.IsdnCardState** %4, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @LOBYTE(i32 %11)
  %13 = call i32 @wByteAMD(%struct.IsdnCardState* %10, i32 1, i32 %12)
  %14 = load %struct.IsdnCardState*, %struct.IsdnCardState** %4, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @HIBYTE(i32 %15)
  %17 = call i32 @wByteAMD(%struct.IsdnCardState* %14, i32 1, i32 %16)
  ret void
}

declare dso_local i32 @wByteAMD(%struct.IsdnCardState*, i32, i32) #1

declare dso_local i32 @LOBYTE(i32) #1

declare dso_local i32 @HIBYTE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
